﻿X.X.X
-----
1. Give tooltips to view actions.
2. Add 'Set Album Artist from Artist' action to tag editor.
3. Add option to specify max cover size when transfering to device.

0.9.1
-----
1. Fix saving of 'Store covers in MPD dir' setting.

0.9.0
-----
 1. Add a 'server' mode to cantata-dynamic. This contains a basic HTTP API to
    list rules, update rules, and start/stop the dynamic mode.
 2. Allow use of 'dynamic' playlists in windows builds, but only for server mode
    cantata-dynamic.
 3. Add support for 'Similar Artists' in dynamic mode.
 4. Add a gui setting to control the enforcement of single-click.
 5. When sorting tracks, sort on duration after sorting on name, title, and
    genre. This way if tracks do not have a track number, disc, year, etc, then
    we will sort on the name/title before duration.
 6. When refreshing DB, make sure Albums view is at top level.
 7. Set Artist, AlbumArtist, and Album of cue files to that of assigned album.
 8. Improve item-view mouse over for Gtk+ style - when hovering, draw selection
    into a QPixmap and set painter's opacity before drawing image.
 9. Workaround issue of sometimes having an item (in icon view) staying in
    mouse-over state, even though mouse has left view.
10. For Qt translations, provide two strings for plural translation. One for
    singular (e.g. "1 Track") and one for plural (e.g. "%1 Tracks"). For
    languages that have more than 1 plural form, it is suggested that BOTH
    strings are translatated to the format "Items: %1" - e.g. "1 Track" becomes
    "Tracks: 1", and "%1 Tracks" becomes "Tracks: %1"
11. Device sync support for Qt-only  builds. To support this, a cut-down version
    of Solid is included.
12. Don't enforce oxygen icons for Qt-only (Linux) builds. Check for missing
    icons, and use alternatives.
13. Use a random icon that matches the repeat icon better.
14. Draw the consume icon in code, so that it matches random and repeat better.