@@ -216,9 +216,7 @@ public Q_SLOTS:
     #endif
     void setMpdVolume(int );
     void playbackButtonsMenu();
-    void controlButtonsMenu();
     void setPlaybackButtonsSize(bool smallButtons);
-    void setControlButtonsSize(bool smallButtons);
     void songLoaded();
     void messageWidgetVisibility(bool v);
     void mpdConnectionStateChanged(bool connected);
@@ -421,11 +419,9 @@ private:
     Action *expandAllAction;
     Action *collapseAllAction;
     Action *smallPlaybackButtonsAction;
-    Action *smallControlButtonsAction;
     QAction *autoHideSplitterAction;
     TrayItem *trayItem;
     QMenu *playbackBtnsMenu;
-    QMenu *controlBtnsMenu;
     QPoint lastPos;
     QSize expandedSize;
     QSize collapsedSize;
