@@ -3,6 +3,7 @@
 1. Give tooltips to view actions.
 2. Add 'Set Album Artist from Artist' action to tag editor.
 3. Add option to specify max cover size when transfering to device.
+4. Remove 'Small Control Buttons' option.
 
 0.9.1
 -----
